@@ -62,3 +62,6 @@
 * Some refactoring in AdvancedLoadCommand regarding :include options
 * Added support for class-less Mappings::Table instances, with just a string name
 * HasAndBelongsToManyAssociation#join_table #left_foreign_key and #right_foreign_key reference actual Table or Column objects now
+* Added :shallow_include option for HABTM joins in AdvancedLoadCommand and corresponding spec
+* Added Commands::AdvancedConditions
+* Added ORDER, LIMIT, OFFSET and WHERE support to AdvancedLoadCommand
